Add talk format
